...
                    android:text="Sign with Facebook"
                    android:textAllCaps="false"
                    android:textStyle="italic" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_goSignUp"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="displaySignUp"
                android:text="No account yet?Create one"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                android:textStyle="italic"
                android:typeface="serif" />

...
